@@ -222,7 +222,6 @@ public class ShopCharacter extends LoggedInPlayer {
 			@Override
 			public void run() {
 				removeCooldown(skill);
-				getClient().getSession().send(CommonPackets.writeCooldown(skill, (short) 0));
 			}
 		}));
 	}
@@ -236,7 +235,11 @@ public class ShopCharacter extends LoggedInPlayer {
 		return returnContext;
 	}
 
-	private void prepareExitChannel() {
+	private void prepareExitServer() {
+		itemExpireTask.cancel();
+		for (Cooldown cooling : cooldowns.values())
+			cooling.cancel();
+
 		saveCharacter();
 	}
 
@@ -245,7 +248,7 @@ public class ShopCharacter extends LoggedInPlayer {
 			ShopServer.getInstance().getCrossServerInterface().sendPartyMemberLogOffNotifications(this, false);
 		if (guildId != 0)
 			ShopServer.getInstance().getCrossServerInterface().sendGuildMemberLogOffNotifications(this, false);
-		prepareExitChannel();
+		prepareExitServer();
 	}
 
 	public void prepareLogOff() {
@@ -254,7 +257,7 @@ public class ShopCharacter extends LoggedInPlayer {
 			ShopServer.getInstance().getCrossServerInterface().sendPartyMemberLogOffNotifications(this, true);
 		if (guildId != 0)
 			ShopServer.getInstance().getCrossServerInterface().sendGuildMemberLogOffNotifications(this, true);
-		prepareExitChannel();
+		prepareExitServer();
 	}
 
 	public void saveCharacter() {
@@ -270,6 +273,7 @@ public class ShopCharacter extends LoggedInPlayer {
 			updateDbAccount(con);
 			updateDbStats(con);
 			updateDbInventory(con);
+			updateDbCooldowns(con);
 			updateDbWishList(con);
 			con.commit();
 		} catch (Throwable ex) {
@@ -356,6 +360,29 @@ public class ShopCharacter extends LoggedInPlayer {
 		} finally {
 			DatabaseManager.cleanup(DatabaseType.STATE, null, ips, null);
 			DatabaseManager.cleanup(DatabaseType.STATE, rs, ps, null);
+		}
+	}
+
+	private void updateDbCooldowns(Connection con) throws SQLException {
+		PreparedStatement ps = null;
+		try {
+			ps = con.prepareStatement("DELETE FROM `cooldowns` WHERE `characterid` = ?");
+			ps.setInt(1, getDataId());
+			ps.executeUpdate();
+			ps.close();
+
+			ps = con.prepareStatement("INSERT INTO `cooldowns` (`characterid`,`skillid`,`remaining`) VALUES (?,?,?)");
+			ps.setInt(1, getDataId());
+			for (Map.Entry<Integer, Cooldown> cooling : cooldowns.entrySet()) {
+				ps.setInt(2, cooling.getKey().intValue());
+				ps.setShort(3, cooling.getValue().getSecondsRemaining());
+				ps.addBatch();
+			}
+			ps.executeBatch();
+		} catch (SQLException e) {
+			throw new SQLException("Failed to save cooldowns of character " + name, e);
+		} finally {
+			DatabaseManager.cleanup(DatabaseType.STATE, null, ps, null);
 		}
 	}
 
